--- a/index.css
+++ b/index.css
@@ -1,3 +1,38 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+  padding: 0px;
+}
+
+nav {
+  width: 100%;
+  height: 50px;
+  position: sticky;
+  top: 0px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: lightcyan;
+}
+nav a {
+  text-decoration: none;
+  color: black;
+}
+
+footer {
+  height: 100px;
+  width: 100%;
+  background-color: darkmagenta;
+  margin: 0px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+footer a {
+  text-decoration: none;
+  color: white;
+}
+
 .landing {
   width: 100vw;
   height: 100vh;
@@ -20,6 +55,7 @@ nav {
   width: 100%;
   height: 50px;
   position: sticky;
+  top: 0px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -28,6 +64,43 @@ nav {
 nav a {
   text-decoration: none;
   color: black;
+}
+
+.portfolio {
+  margin-top: 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.portfolio .project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: orange;
+}
+.portfolio .project .project-content {
+  width: 80%;
+  display: grid;
+  grid-template-columns: 1fr 1r;
+  grid-template-rows: 1fr 1fr;
+}
+.portfolio .project .project-content img {
+  width: 300px;
+}
+.portfolio .project .project-content #one {
+  grid-row: 1/2;
+  grid-column: 1/2;
+}
+.portfolio .project .project-content #two {
+  grid-row: 2/3;
+  grid-column: 1/2;
+}
+.portfolio .project .project-content p {
+  grid-row: 1/3;
+  grid-column: 2/3;
+  width: 300px;
+  margin-left: 20px;
 }
 
 /*# sourceMappingURL=index.css.map */
