--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,5 @@
+@import 'partials.scss';
+
 .landing {
     width: 100vw;
     height: 100vh;
@@ -20,6 +22,7 @@ nav {
     width: 100%;
     height: 50px;
     position: sticky;
+    top: 0px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -28,5 +31,42 @@ nav {
     a {
         text-decoration: none;
         color: black;
+    }
+}
+
+.portfolio {
+    margin-top:100px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .project {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: orange;
+        .project-content {
+            width: 80%;
+            display: grid; 
+            grid-template-columns: 1fr 1r;
+            grid-template-rows: 1fr 1fr;
+            img {
+                width: 300px;
+            }
+            #one {
+                grid-row: 1 / 2;
+                grid-column: 1 / 2;
+            }
+            #two {
+                grid-row: 2 / 3;
+                grid-column: 1 / 2;
+            }
+            p {
+                grid-row: 1 / 3;
+                grid-column: 2 / 3;
+                width: 300px;
+                margin-left: 20px;
+            }
+        }
     }
 }
