--- a/about.css
+++ b/about.css
@@ -43,6 +43,7 @@ footer a {
 .about .skills-container {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   width: 80%;
 }
 .about .skills-container .skill {
@@ -69,6 +70,12 @@ footer a {
   width: 300px;
   margin-left: 20px;
   margin-top: 0px;
+}
+@media screen and (max-width: 600px) {
+  .about .bio {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .about .links-container {
   display: flex;
