--- a/about.scss
+++ b/about.scss
@@ -9,6 +9,7 @@
     .skills-container {
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
         width: 80%;
         .skill {
             display: flex;
@@ -34,6 +35,13 @@
             width: 300px;
             margin-left: 20px;
             margin-top: 0px;
+        }
+    }
+
+    @media screen and (max-width: 600px) {
+        .bio {
+            flex-direction: column;
+            align-items: center;
         }
     }
     .links-container {
