--- a/contact.scss
+++ b/contact.scss
@@ -4,15 +4,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
+    margin: 100px 0px;
     form {
-        margin-top: 100px;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
-        width: 400px;
+        width: 300px;
         text-align: left;
+        input {
+            margin: 10px 0px;
+        }
+        button {
+            margin-top: 10px;
+        }
     }
 }
 
