--- a/index.css
+++ b/index.css
@@ -10,7 +10,6 @@ nav {
   position: sticky;
   top: 0px;
   display: flex;
-  justify-content: space-around;
   align-items: center;
   background-color: lightcyan;
 }
@@ -19,6 +18,27 @@ nav a {
   color: black;
 }
 
+@media screen and (min-width: 601px) {
+  nav {
+    justify-content: space-around;
+  }
+  nav i {
+    display: none;
+  }
+}
+@media screen and (max-width: 600px) {
+  nav {
+    display: flex;
+    justify-content: flex-end;
+  }
+  nav a {
+    display: none;
+  }
+  nav i {
+    margin-right: 20px;
+    text-align: right;
+  }
+}
 footer {
   height: 100px;
   width: 100%;
@@ -51,21 +71,6 @@ footer a {
   display: block;
 }
 
-nav {
-  width: 100%;
-  height: 50px;
-  position: sticky;
-  top: 0px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: lightcyan;
-}
-nav a {
-  text-decoration: none;
-  color: black;
-}
-
 .portfolio {
   margin-top: 100px;
   width: 100%;
@@ -78,29 +83,48 @@ nav a {
   flex-direction: column;
   align-items: center;
   background-color: orange;
+  width: 100%;
 }
-.portfolio .project .project-content {
-  width: 80%;
-  display: grid;
-  grid-template-columns: 1fr 1r;
-  grid-template-rows: 1fr 1fr;
+@media screen and (min-width: 601px) {
+  .portfolio .project .project-content {
+    width: 600px;
+    display: grid;
+    grid-template-columns: 1fr 1r;
+    grid-template-rows: 1fr 1fr;
+  }
+  .portfolio .project .project-content img {
+    width: 300px;
+  }
+  .portfolio .project .project-content #one {
+    grid-row: 1/2;
+    grid-column: 1/2;
+  }
+  .portfolio .project .project-content #two {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+  .portfolio .project .project-content p {
+    grid-row: 1/3;
+    grid-column: 2/3;
+    width: 300px;
+    margin-left: 20px;
+  }
 }
-.portfolio .project .project-content img {
-  width: 300px;
-}
-.portfolio .project .project-content #one {
-  grid-row: 1/2;
-  grid-column: 1/2;
-}
-.portfolio .project .project-content #two {
-  grid-row: 2/3;
-  grid-column: 1/2;
-}
-.portfolio .project .project-content p {
-  grid-row: 1/3;
-  grid-column: 2/3;
-  width: 300px;
-  margin-left: 20px;
+
+@media screen and (max-width: 600px) {
+  .project-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .project-content img {
+    display: block;
+    width: 80%;
+  }
+  .project-content p {
+    display: block;
+    width: 80%;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
