--- a/index.scss
+++ b/index.scss
@@ -18,21 +18,21 @@
      }
 }
 
-nav {
-    width: 100%;
-    height: 50px;
-    position: sticky;
-    top: 0px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: lightcyan;
+// nav {
+//     width: 100%;
+//     height: 50px;
+//     position: sticky;
+//     top: 0px;
+//     display: flex;
+//     justify-content: space-around;
+//     align-items: center;
+//     background-color: lightcyan;
 
-    a {
-        text-decoration: none;
-        color: black;
-    }
-}
+//     a {
+//         text-decoration: none;
+//         color: black;
+//     }
+// }
 
 .portfolio {
     margin-top:100px;
@@ -45,28 +45,51 @@ nav {
         flex-direction: column;
         align-items: center;
         background-color: orange;
-        .project-content {
-            width: 80%;
-            display: grid; 
-            grid-template-columns: 1fr 1r;
-            grid-template-rows: 1fr 1fr;
-            img {
-                width: 300px;
-            }
-            #one {
-                grid-row: 1 / 2;
-                grid-column: 1 / 2;
-            }
-            #two {
-                grid-row: 2 / 3;
-                grid-column: 1 / 2;
-            }
-            p {
-                grid-row: 1 / 3;
-                grid-column: 2 / 3;
-                width: 300px;
-                margin-left: 20px;
-            }
+        width: 100%;
+
+        @media screen and (min-width: 601px) {
+            .project-content {
+                width: 600px;
+                display: grid; 
+                grid-template-columns: 1fr 1r;
+                grid-template-rows: 1fr 1fr;
+                img {
+                    width: 300px;
+                }
+                #one {
+                    grid-row: 1 / 2;
+                    grid-column: 1 / 2;
+                }
+                #two {
+                    grid-row: 2 / 3;
+                    grid-column: 1 / 2;
+                }
+                p {
+                    grid-row: 1 / 3;
+                    grid-column: 2 / 3;
+                    width: 300px;
+                    margin-left: 20px;
+                }
+            }   
         }
+        
     }
 }
+
+@media screen and (max-width: 600px) {
+            .project-content {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                img {
+                    display: block;
+                    width: 80%;
+                }
+
+                p {
+                    display: block;
+                    width: 80%;
+                }
+            }
+}
+
