--- a/partials.scss
+++ b/partials.scss
@@ -4,22 +4,46 @@ body {
     padding: 0px;
 }
 
-nav {
-    
+nav {   
     width: 100%;
     height: 50px;
     position: sticky;
     top: 0px;
     display: flex;
-    justify-content: space-around;
+    // justify-content: space-around;
     align-items: center;
     background-color: lightcyan;
-
     a {
         text-decoration: none;
         color: black;
     }
+
 }
+
+@media screen and (min-width: 601px) {
+    nav {
+        justify-content: space-around;
+        i {
+            display: none;
+        }   
+    }
+}
+
+@media screen and (max-width: 600px) {
+    nav {
+        display: flex;
+        justify-content: flex-end;
+        a {
+            display: none;
+        }
+        i {
+            margin-right: 20px;
+            text-align: right;
+        }
+    }  
+}
+
+
 
 footer {
     height: 100px;
