--- a/about.css
+++ b/about.css
@@ -1,7 +1,25 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
   padding: 0px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+}
+
+p {
+  line-height: 1.5rem;
+}
+
+h1, h2, h3 {
+  font-family: "Prata", serif;
+}
+
+h1 {
+  font-size: 72pt;
+}
+
+h2 {
+  font-size: 36pt;
+  border-bottom: 1px solid black;
 }
 
 nav {
@@ -10,7 +28,6 @@ nav {
   position: sticky;
   top: 0px;
   display: flex;
-  justify-content: space-around;
   align-items: center;
   background-color: lightcyan;
 }
@@ -19,6 +36,30 @@ nav a {
   color: black;
 }
 
+@media screen and (min-width: 601px) {
+  nav {
+    justify-content: space-around;
+  }
+  nav .fa-bars {
+    display: none;
+  }
+}
+@media screen and (max-width: 600px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  nav a {
+    visibility: hidden;
+  }
+  nav nav:hover {
+    background-color: blue;
+  }
+  nav nav:hover a {
+    visibility: visible;
+  }
+}
 footer {
   height: 100px;
   width: 100%;
