--- a/index.css
+++ b/index.css
@@ -1,7 +1,26 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
   padding: 0px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+}
+
+p {
+  line-height: 1.5rem;
+}
+
+h1, h2, h3 {
+  font-family: "Lora", serif;
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 72pt;
+}
+
+h2 {
+  font-size: 36pt;
+  border-bottom: 1px solid black;
 }
 
 nav {
@@ -22,21 +41,24 @@ nav a {
   nav {
     justify-content: space-around;
   }
-  nav i {
+  nav .fa-bars {
     display: none;
   }
 }
 @media screen and (max-width: 600px) {
   nav {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-start;
   }
   nav a {
-    display: none;
+    visibility: hidden;
   }
-  nav i {
-    margin-right: 20px;
-    text-align: right;
+  nav nav:hover {
+    background-color: blue;
+  }
+  nav nav:hover a {
+    visibility: visible;
   }
 }
 footer {
@@ -82,8 +104,15 @@ footer a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: orange;
+  background-color: lightcyan;
+  padding: 50px 0px;
   width: 100%;
+}
+.portfolio .project .project-content {
+  margin: 50px 0px;
+}
+.portfolio .project .project-content p {
+  margin: 0px 20px;
 }
 @media screen and (min-width: 601px) {
   .portfolio .project .project-content {
@@ -107,7 +136,6 @@ footer a {
     grid-row: 1/3;
     grid-column: 2/3;
     width: 300px;
-    margin-left: 20px;
   }
 }
 
