--- a/index.scss
+++ b/index.scss
@@ -44,9 +44,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: orange;
+        background-color: lightcyan;
+        padding: 50px 0px;
         width: 100%;
-
+        .project-content {
+            margin: 50px 0px;
+            p {
+                margin: 0px 20px;
+            }
+        }
         @media screen and (min-width: 601px) {
             .project-content {
                 width: 600px;
@@ -68,7 +74,6 @@
                     grid-row: 1 / 3;
                     grid-column: 2 / 3;
                     width: 300px;
-                    margin-left: 20px;
                 }
             }   
         }
