--- a/partials.scss
+++ b/partials.scss
@@ -1,7 +1,26 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+}
+
+p {
+    line-height: 1.5rem;
+}
+
+h1, h2, h3 {
+    font-family: 'Lora', serif;
+    font-weight: 400;
+}
+
+h1 {
+    font-size: 72pt;
+}
+
+h2 {
+    font-size: 36pt;
+    border-bottom: 1px solid black;
 }
 
 nav {   
@@ -23,26 +42,30 @@ nav {
 @media screen and (min-width: 601px) {
     nav {
         justify-content: space-around;
-        i {
+        .fa-bars {
             display: none;
         }   
+        
     }
 }
 
 @media screen and (max-width: 600px) {
     nav {
         display: flex;
-        justify-content: flex-end;
+        flex-direction: column;
+        align-items: flex-start;
+
         a {
-            display: none;
+            visibility: hidden;
         }
-        i {
-            margin-right: 20px;
-            text-align: right;
+        nav:hover {
+            background-color: blue;
+            a {
+                visibility: visible;
+            }
         }
     }  
 }
-
 
 
 footer {
