--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ p {
   line-height: 1.5rem;
 }
 
-h1, h2, h3 {
+h1, h2 {
   font-family: "Lora", serif;
   font-weight: 400;
 }
@@ -19,27 +19,28 @@ h1 {
 }
 
 h2 {
-  font-size: 36pt;
-  border-bottom: 1px solid black;
+  font-size: 48pt;
 }
 
 nav {
   width: 100%;
-  height: 50px;
   position: sticky;
   top: 0px;
   display: flex;
+  z-index: 10;
   align-items: center;
-  background-color: lightcyan;
+  background-color: #24002E;
 }
 nav a {
   text-decoration: none;
-  color: black;
+  color: #E00073;
+  padding: 20px 50px;
+  text-transform: uppercase;
 }
 
 @media screen and (min-width: 601px) {
   nav {
-    justify-content: space-around;
+    justify-content: center;
   }
   nav .fa-bars {
     display: none;
@@ -52,7 +53,7 @@ nav a {
     align-items: flex-start;
   }
   nav a {
-    visibility: hidden;
+    padding: 2px 10px;
   }
   nav nav:hover {
     background-color: blue;
@@ -64,7 +65,7 @@ nav a {
 footer {
   height: 100px;
   width: 100%;
-  background-color: darkmagenta;
+  background-color: #24002E;
   margin: 0px;
   display: flex;
   justify-content: space-around;
@@ -75,22 +76,97 @@ footer a {
   color: white;
 }
 
+.slide-container {
+  width: 500px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  text-align: center;
+}
+
+.image-container {
+  width: 1500px;
+  height: 500px;
+  position: relative;
+  transition: left 1s;
+}
+
+img {
+  width: 500px;
+}
+
+.slider-image {
+  float: left;
+  margin: 0px;
+  padding: 0px;
+}
+
+.button-container {
+  top: -20px;
+  position: relative;
+}
+
+.slider-button {
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: black;
+}
+
+#slider-image-1:target ~ .image-container {
+  left: 0px;
+}
+
+#slider-image-2:target ~ .image-container {
+  left: -500px;
+}
+
+#slider-image-3:target ~ .image-container {
+  left: -1000px;
+}
+
 .landing {
   width: 100vw;
   height: 100vh;
-  background-color: darkmagenta;
+  background-color: #24002E;
+  background: linear-gradient(0deg, #020024 0%, #24002e 100%);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.landing h1 {
-  color: hotpink;
-  display: block;
+.landing .landing-container {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.landing a {
-  background-color: lightcyan;
+.landing .landing-container h1 {
+  color: #E00073;
   display: block;
+  text-align: center;
+}
+.landing .landing-container a {
+  display: block;
+  color: #00FFBF;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #00FFBF;
+  text-decoration: none;
+}
+.landing .landing-container a:hover {
+  background-color: #00FFBF;
+  color: #00003E;
+}
+.landing .landing-container h3 {
+  color: #810060;
+  font-size: 28pt;
+  text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  letter-spacing: 1px;
 }
 
 .portfolio {
@@ -99,6 +175,9 @@ footer a {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.portfolio #toy-robot {
+  background-color: #00FFBF;
 }
 .portfolio .project {
   display: flex;
@@ -116,13 +195,9 @@ footer a {
 }
 @media screen and (min-width: 601px) {
   .portfolio .project .project-content {
-    width: 600px;
     display: grid;
     grid-template-columns: 1fr 1r;
     grid-template-rows: 1fr 1fr;
-  }
-  .portfolio .project .project-content img {
-    width: 300px;
   }
   .portfolio .project .project-content #one {
     grid-row: 1/2;
