--- a/partials.scss
+++ b/partials.scss
@@ -3,13 +3,14 @@ body {
     padding: 0px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
+    
 }
 
 p {
     line-height: 1.5rem;
 }
 
-h1, h2, h3 {
+h1, h2 {
     font-family: 'Lora', serif;
     font-weight: 400;
 }
@@ -19,29 +20,32 @@ h1 {
 }
 
 h2 {
-    font-size: 36pt;
-    border-bottom: 1px solid black;
+    font-size: 48pt;
+    // border-bottom: 1px solid black;
 }
 
 nav {   
     width: 100%;
-    height: 50px;
+    // height: 50px;
     position: sticky;
     top: 0px;
     display: flex;
+    z-index: 10;
     // justify-content: space-around;
     align-items: center;
-    background-color: lightcyan;
+    background-color: #24002E;
     a {
         text-decoration: none;
-        color: black;
+        color: #E00073;
+        padding: 20px 50px;
+        text-transform: uppercase;
     }
 
 }
 
 @media screen and (min-width: 601px) {
     nav {
-        justify-content: space-around;
+        justify-content: center;
         .fa-bars {
             display: none;
         }   
@@ -56,7 +60,7 @@ nav {
         align-items: flex-start;
 
         a {
-            visibility: hidden;
+            padding: 2px 10px;
         }
         nav:hover {
             background-color: blue;
@@ -71,7 +75,7 @@ nav {
 footer {
     height: 100px;
     width: 100%;
-    background-color: darkmagenta;
+    background-color: #24002E;
     margin: 0px;
     display: flex;
     justify-content: space-around;
