--- a/about.css
+++ b/about.css
@@ -7,10 +7,12 @@ body {
 
 p {
   line-height: 1.5rem;
+  font-family: "Lora", serif;
 }
 
-h1, h2, h3 {
-  font-family: "Prata", serif;
+h1, h2 {
+  font-family: "Lora", serif;
+  font-weight: 400;
 }
 
 h1 {
@@ -18,30 +20,28 @@ h1 {
 }
 
 h2 {
-  font-size: 36pt;
-  border-bottom: 1px solid black;
+  font-size: 48pt;
 }
 
 nav {
   width: 100%;
-  height: 50px;
   position: sticky;
   top: 0px;
   display: flex;
+  z-index: 10;
   align-items: center;
-  background-color: lightcyan;
+  background-color: #1A1A1A;
 }
 nav a {
   text-decoration: none;
-  color: black;
+  color: #E00073;
+  padding: 20px 50px;
+  text-transform: uppercase;
 }
 
 @media screen and (min-width: 601px) {
   nav {
-    justify-content: space-around;
-  }
-  nav .fa-bars {
-    display: none;
+    justify-content: center;
   }
 }
 @media screen and (max-width: 600px) {
@@ -49,21 +49,22 @@ nav a {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    min-height: 50px;
   }
   nav a {
-    visibility: hidden;
+    padding: 2px 10px;
+    display: none;
+    background-color: #24002E;
   }
-  nav nav:hover {
-    background-color: blue;
-  }
-  nav nav:hover a {
-    visibility: visible;
+
+  nav:hover a {
+    display: block;
   }
 }
 footer {
   height: 100px;
   width: 100%;
-  background-color: darkmagenta;
+  background-color: #24002E;
   margin: 0px;
   display: flex;
   justify-content: space-around;
