--- a/contact.css
+++ b/contact.css
@@ -1,28 +1,70 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
   padding: 0px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+}
+
+p {
+  line-height: 1.5rem;
+  font-family: "Lora", serif;
+}
+
+h1, h2 {
+  font-family: "Lora", serif;
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 72pt;
+}
+
+h2 {
+  font-size: 48pt;
 }
 
 nav {
   width: 100%;
-  height: 50px;
   position: sticky;
   top: 0px;
   display: flex;
-  justify-content: space-around;
+  z-index: 10;
   align-items: center;
-  background-color: lightcyan;
+  background-color: #1A1A1A;
 }
 nav a {
   text-decoration: none;
-  color: black;
+  color: #E00073;
+  padding: 20px 50px;
+  text-transform: uppercase;
 }
 
+@media screen and (min-width: 601px) {
+  nav {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 600px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    min-height: 50px;
+  }
+  nav a {
+    padding: 2px 10px;
+    display: none;
+    background-color: #24002E;
+  }
+
+  nav:hover a {
+    display: block;
+  }
+}
 footer {
   height: 100px;
   width: 100%;
-  background-color: darkmagenta;
+  background-color: #24002E;
   margin: 0px;
   display: flex;
   justify-content: space-around;
@@ -48,7 +90,10 @@ footer a {
   text-align: left;
 }
 .contact form input {
-  margin: 20px 0px;
+  margin: 10px 0px;
+}
+.contact form button {
+  margin-top: 10px;
 }
 
 /*# sourceMappingURL=contact.css.map */
