--- a/indax.css
+++ b/indax.css
@@ -207,7 +207,7 @@ footer a {
   flex-direction: column;
   align-items: center;
   background-color: lightcyan;
-  padding: 100px 0px;
+  padding: 20px 0px;
   width: 100%;
 }
 .portfolio .project h3 {
@@ -222,15 +222,11 @@ footer a {
   border: 2px solid #E00073;
   border-radius: 5px;
   padding: 5px;
-  font-size: 18pt;
-  margin-top: 5px;
+  font-size: 16pt;
 }
 .portfolio .project .github:hover {
   background-color: #E00073;
   color: rgba(0, 0, 0, 0);
-}
-.portfolio .project .project-content {
-  padding-bottom: 10px;
 }
 .portfolio .project .project-content p {
   margin: 0px 20px;
@@ -278,4 +274,4 @@ footer a {
   }
 }
 
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=indax.css.map */
