--- a/index.scss
+++ b/index.scss
@@ -4,7 +4,7 @@
 .landing {
     width: 100vw;
     height: 100vh;
-    background-color: #24002E;
+    background-color: #1A1A1A;
     background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(36,0,46,1) 100%);
     display: flex;
     justify-content: center;
@@ -16,7 +16,7 @@
         flex-direction: column;
         align-items: center;
         h1 {
-            color: #E00073;
+            color: white;
             display: block;
             text-align: center;
         }
@@ -27,6 +27,7 @@
             border-radius: 5px;
             border: 1px solid #00FFBF;
             text-decoration: none;
+            
         }
 
         a:hover {
@@ -54,39 +55,66 @@
     flex-direction: column;
     align-items: center;
     #toy-robot {
-        background-color: #00FFBF;
+        // background-color: #00FFBF;
     }
     .project {
         display: flex;
         flex-direction: column;
         align-items: center;
+        // background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(36,0,46,1) 100%);
         background-color: lightcyan;
-        padding: 50px 0px;
+        padding: 100px 0px;
         width: 100%;
+        h3 {
+            text-transform: uppercase;
+            letter-spacing: 0.3em;
+            font-size: 26pt;
+            margin-bottom: 0px;
+        }
+
+        .github {
+            text-decoration: none;
+            color: #E00073;
+            border: 2px solid #E00073;
+            border-radius: 5px;
+            padding: 5px;
+            font-size: 18pt;
+            margin-top: 5px;
+        }
+
+        .github:hover {
+            background-color: #E00073;   
+            color: rgba(0,0,0,0.0)     
+        }
+
         .project-content {
-            margin: 50px 0px;
+            padding-bottom: 10px;
             p {
                 margin: 0px 20px;
+                font-size: 18pt;
+                line-height: 2rem;
             }
+           
         }
         @media screen and (min-width: 601px) {
             .project-content {
                 // width: 600px;
                 display: grid; 
                 grid-template-columns: 1fr 1r;
-                grid-template-rows: 1fr 1fr;
+                grid-template-rows: 1fr;
                 #one {
                     grid-row: 1 / 2;
                     grid-column: 1 / 2;
                 }
-                #two {
-                    grid-row: 2 / 3;
-                    grid-column: 1 / 2;
-                }
                 p {
-                    grid-row: 1 / 3;
+                    grid-row: 1 / 2;
                     grid-column: 2 / 3;
                     width: 300px;
+                    padding-top: 100px;
+                }
+                img {
+                    width: 500px;
+                    border-radius: 20px;
                 }
             }   
         }
@@ -101,12 +129,16 @@
                 align-items: center;
                 img {
                     display: block;
-                    width: 80%;
+                    width: 300px;
+                    border-radius: 20px;
+                    border: 10px solid grey;
+
                 }
 
                 p {
                     display: block;
-                    width: 80%;
+                    width: 300px;
+                    padding-top: 20px;
                 }
             }
 }
