--- a/partials.scss
+++ b/partials.scss
@@ -8,6 +8,7 @@ body {
 
 p {
     line-height: 1.5rem;
+    font-family: 'Lora', serif;
 }
 
 h1, h2 {
@@ -33,7 +34,7 @@ nav {
     z-index: 10;
     // justify-content: space-around;
     align-items: center;
-    background-color: #24002E;
+    background-color: #1A1A1A;
     a {
         text-decoration: none;
         color: #E00073;
@@ -45,11 +46,7 @@ nav {
 
 @media screen and (min-width: 601px) {
     nav {
-        justify-content: center;
-        .fa-bars {
-            display: none;
-        }   
-        
+        justify-content: center;       
     }
 }
 
@@ -58,17 +55,18 @@ nav {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        min-height: 50px;
 
         a {
             padding: 2px 10px;
-        }
-        nav:hover {
-            background-color: blue;
-            a {
-                visibility: visible;
-            }
+            display: none;
+            background-color: #24002E;
         }
     }  
+
+    nav:hover a {  
+        display: block;       
+    }
 }
 
 
