--- a/slideshow.scss
+++ b/slideshow.scss
@@ -1,21 +1,16 @@
 .slide-container {
-    width: 500px;
-    height: 500px;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
     text-align: center;
+    
 }
 
-.image-container {
-    width: 1500px;
-    height: 500px;
+.image-container {   
     position: relative;
+    top: 100px;
     transition: left 1s;
-}
-
-img {
-    width: 500px;
+   
 }
 
 .slider-image {
@@ -25,26 +20,64 @@ img {
 }
 
 .button-container {
-    top: -20px;
+    top: -25px;
     position: relative;
 }
 
 .slider-button {
     display: inline-block;
-    height: 10px;
-    width: 10px;
+    height: 20px;
+    width: 20px;
     border-radius: 50%;
     background-color: black;
 }
+
+.slider-button:hover {
+    background-color: white;
+}
+
 
 #slider-image-1:target ~ .image-container {
     left: 0px;
 }
 
-#slider-image-2:target ~ .image-container {
-    left: -500px;
+@media screen and (min-width: 601px) {
+    .slide-container {
+        width: 500px;
+        height: 600px;
+    }
+
+    .image-container {
+        width: 1500px;
+        height: 600px;
+    }
+
+    #slider-image-2:target ~ .image-container {
+        left: -500px;
+    }
+    
+    #slider-image-3:target ~ .image-container {
+        left: -1000px;
+    }
 }
 
-#slider-image-3:target ~ .image-container {
-    left: -1000px;
+@media screen and (max-width: 600px) {
+    .slide-container {
+        width: 300px;
+        height: 400px;
+    }
+
+    .image-container {
+        width: 900px;
+        height: 400px;
+    }
+
+    #slider-image-2:target ~ .image-container {
+        left: -300px;
+    }
+    
+    #slider-image-3:target ~ .image-container {
+        left: -600px;
+    }
 }
+
