--- a/index.scss
+++ b/index.scss
@@ -5,7 +5,8 @@
     width: 100vw;
     height: 100vh;
     background-color: #1A1A1A;
-    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(36,0,46,1) 100%);
+    background-blend-mode: multiply;
+    background: linear-gradient(0deg, rgba(2,0,36,0.5) 0%, rgba(36,0,46,0.5)), url("https://images.pexels.com/photos/220118/pexels-photo-220118.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,6 +20,7 @@
             color: white;
             display: block;
             text-align: center;
+            font-size: 48pt;
         }
         a {
             display: block;
@@ -37,11 +39,12 @@
    
         h3 {
            color: #810060;
-           font-size: 28pt;
+           font-size: 24pt;
            text-transform: uppercase;
            font-family: 'Roboto', sans-serif;
            font-weight: 300;
            letter-spacing: 1px;
+           text-align: center;
    
         }
     }
@@ -54,15 +57,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    #toy-robot {
-        // background-color: #00FFBF;
-    }
     .project {
         display: flex;
         flex-direction: column;
         align-items: center;
         // background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(36,0,46,1) 100%);
-        background-color: lightcyan;
+        background-color: white;
         padding: 100px 0px;
         width: 100%;
         h3 {
@@ -70,6 +70,10 @@
             letter-spacing: 0.3em;
             font-size: 26pt;
             margin-bottom: 0px;
+        }
+
+        img {
+            border-radius: 10px;
         }
 
         .github {
@@ -84,14 +88,13 @@
 
         .github:hover {
             background-color: #E00073;   
-            color: rgba(0,0,0,0.0)     
+            color: lightcyan;   
         }
 
         .project-content {
             padding-bottom: 10px;
             p {
-                margin: 0px 20px;
-                font-size: 18pt;
+                margin: 0px 50px;
                 line-height: 2rem;
             }
            
@@ -111,10 +114,11 @@
                     grid-column: 2 / 3;
                     width: 300px;
                     padding-top: 100px;
+                    font-size: 16pt;
                 }
                 img {
                     width: 500px;
-                    border-radius: 20px;
+                    // border-radius: 20px;
                 }
             }   
         }
@@ -130,15 +134,14 @@
                 img {
                     display: block;
                     width: 300px;
-                    border-radius: 20px;
-                    border: 10px solid grey;
-
+                    // border-radius: 20px;
                 }
 
                 p {
                     display: block;
                     width: 300px;
                     padding-top: 20px;
+                    font-size: 14pt;
                 }
             }
 }
