--- a/about.css
+++ b/about.css
@@ -38,6 +38,9 @@ nav a {
   padding: 20px 50px;
   text-transform: uppercase;
 }
+nav a:hover {
+  color: white;
+}
 
 @media screen and (min-width: 601px) {
   nav {
@@ -64,14 +67,18 @@ nav a {
 footer {
   height: 100px;
   width: 100%;
-  background-color: #24002E;
+  background-color: #1A1A1A;
   margin: 0px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 footer a {
   text-decoration: none;
+  color: grey;
+  margin: 0px 50px;
+}
+footer a:hover {
   color: white;
 }
 
@@ -86,22 +93,31 @@ footer a {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  width: 80%;
+  width: 50%;
+  margin-bottom: 50px;
 }
 .about .skills-container .skill {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  margin: 0px 50px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+}
+.about .skills-container .skill i {
+  font-size: 48pt;
+  color: #00FFBF;
 }
 .about .skills-container .skill img {
-  width: 100px;
-  height: 100px;
-  border: 1px solid black;
+  width: 50px;
 }
 .about .bio {
   display: flex;
   justify-content: center;
   width: 80%;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 .about .bio img {
   width: 300px;
@@ -110,23 +126,31 @@ footer a {
 }
 .about .bio p {
   width: 300px;
-  margin-left: 20px;
-  margin-top: 0px;
 }
 @media screen and (max-width: 600px) {
   .about .bio {
     flex-direction: column;
     align-items: center;
   }
+  .about .bio p {
+    margin-top: 20px;
+  }
+}
+@media screen and (min-width: 601px) {
+  .about p {
+    margin-left: 20px;
+    margin-top: 0px;
+  }
 }
 .about .links-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 50px;
 }
 .about .links-container a {
   text-decoration: none;
-  background-color: hotpink;
+  background-color: #E00073;
   color: white;
   padding: 10px;
   border-radius: 5px;
