--- a/about.scss
+++ b/about.scss
@@ -10,15 +10,22 @@
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
-        width: 80%;
+        width: 50%;
+        margin-bottom: 50px;
         .skill {
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: space-between;
+            margin: 0px 50px;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 300;
+            i {
+                font-size: 48pt;
+                color: #00FFBF;
+            }
             img {
-                width: 100px;
-                height: 100px;
-                border: 1px solid black;
+                width: 50px;
             }
         }
     }
@@ -26,6 +33,8 @@
         display: flex;
         justify-content: center;
         width: 80%;
+        margin-bottom: 50px;
+        margin-top: 50px;
         img {
             width: 300px;
             height: 300px;
@@ -33,8 +42,6 @@
         }
         p {
             width: 300px;
-            margin-left: 20px;
-            margin-top: 0px;
         }
     }
 
@@ -42,15 +49,27 @@
         .bio {
             flex-direction: column;
             align-items: center;
+
+            p {
+                margin-top: 20px;
+            }
+        }
+    }
+
+    @media screen and (min-width: 601px) {
+        p {
+            margin-left: 20px;
+            margin-top: 0px;
         }
     }
     .links-container {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 50px;
         a {
             text-decoration: none;
-            background-color: hotpink;
+            background-color: #E00073;
             color: white;
             padding: 10px;
             border-radius: 5px;
