--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0px;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
+  background-color: white;
 }
 
 p {
@@ -38,6 +39,9 @@ nav a {
   padding: 20px 50px;
   text-transform: uppercase;
 }
+nav a:hover {
+  color: white;
+}
 
 @media screen and (min-width: 601px) {
   nav {
@@ -64,14 +68,18 @@ nav a {
 footer {
   height: 100px;
   width: 100%;
-  background-color: #24002E;
+  background-color: #1A1A1A;
   margin: 0px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 footer a {
   text-decoration: none;
+  color: grey;
+  margin: 0px 50px;
+}
+footer a:hover {
   color: white;
 }
 
@@ -157,7 +165,8 @@ footer a {
   width: 100vw;
   height: 100vh;
   background-color: #1A1A1A;
-  background: linear-gradient(0deg, #020024 0%, #24002e 100%);
+  background-blend-mode: multiply;
+  background: linear-gradient(0deg, rgba(2, 0, 36, 0.5) 0%, rgba(36, 0, 46, 0.5)), url("https://images.pexels.com/photos/220118/pexels-photo-220118.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
   display: flex;
   justify-content: center;
   align-items: center;
@@ -173,6 +182,7 @@ footer a {
   color: white;
   display: block;
   text-align: center;
+  font-size: 48pt;
 }
 .landing .landing-container a {
   display: block;
@@ -188,11 +198,12 @@ footer a {
 }
 .landing .landing-container h3 {
   color: #810060;
-  font-size: 28pt;
+  font-size: 24pt;
   text-transform: uppercase;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   letter-spacing: 1px;
+  text-align: center;
 }
 
 .portfolio {
@@ -206,7 +217,7 @@ footer a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: lightcyan;
+  background-color: white;
   padding: 100px 0px;
   width: 100%;
 }
@@ -215,6 +226,9 @@ footer a {
   letter-spacing: 0.3em;
   font-size: 26pt;
   margin-bottom: 0px;
+}
+.portfolio .project img {
+  border-radius: 10px;
 }
 .portfolio .project .github {
   text-decoration: none;
@@ -227,14 +241,13 @@ footer a {
 }
 .portfolio .project .github:hover {
   background-color: #E00073;
-  color: rgba(0, 0, 0, 0);
+  color: lightcyan;
 }
 .portfolio .project .project-content {
   padding-bottom: 10px;
 }
 .portfolio .project .project-content p {
-  margin: 0px 20px;
-  font-size: 18pt;
+  margin: 0px 50px;
   line-height: 2rem;
 }
 @media screen and (min-width: 601px) {
@@ -252,10 +265,10 @@ footer a {
     grid-column: 2/3;
     width: 300px;
     padding-top: 100px;
+    font-size: 16pt;
   }
   .portfolio .project .project-content img {
     width: 500px;
-    border-radius: 20px;
   }
 }
 
@@ -268,13 +281,12 @@ footer a {
   .project-content img {
     display: block;
     width: 300px;
-    border-radius: 20px;
-    border: 10px solid grey;
   }
   .project-content p {
     display: block;
     width: 300px;
     padding-top: 20px;
+    font-size: 14pt;
   }
 }
 
