--- a/partials.scss
+++ b/partials.scss
@@ -3,6 +3,7 @@ body {
     padding: 0px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
+    background-color: white;
     
 }
 
@@ -22,17 +23,14 @@ h1 {
 
 h2 {
     font-size: 48pt;
-    // border-bottom: 1px solid black;
 }
 
 nav {   
     width: 100%;
-    // height: 50px;
     position: sticky;
     top: 0px;
     display: flex;
     z-index: 10;
-    // justify-content: space-around;
     align-items: center;
     background-color: #1A1A1A;
     a {
@@ -40,6 +38,9 @@ nav {
         color: #E00073;
         padding: 20px 50px;
         text-transform: uppercase;
+    }
+    a:hover {
+        color: white;
     }
 
 }
@@ -73,13 +74,17 @@ nav {
 footer {
     height: 100px;
     width: 100%;
-    background-color: #24002E;
+    background-color: #1A1A1A;
     margin: 0px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     a {
         text-decoration: none;
+        color: grey;
+        margin: 0px 50px;
+    }
+    a:hover {
         color: white;
     }
 }
