--- a/slideshow.scss
+++ b/slideshow.scss
@@ -41,6 +41,10 @@
     left: 0px;
 }
 
+#rock-image-1:target ~ .image-container {
+    left: 0px;
+}
+
 @media screen and (min-width: 601px) {
     .slide-container {
         width: 500px;
@@ -57,6 +61,14 @@
     }
     
     #slider-image-3:target ~ .image-container {
+        left: -1000px;
+    }
+
+    #rock-image-2:target ~ .image-container {
+        left: -500px;
+    }
+    
+    #rock-image-3:target ~ .image-container {
         left: -1000px;
     }
 }
@@ -77,6 +89,14 @@
     }
     
     #slider-image-3:target ~ .image-container {
+        left: -600px;
+    }
+
+    #rock-image-2:target ~ .image-container {
+        left: -300px;
+    }
+    
+    #rock-image-3:target ~ .image-container {
         left: -600px;
     }
 }
