added toy robot

--- a/index.css
+++ b/index.css
@@ -109,10 +109,10 @@ footer a:hover {
 
 .slider-button {
   display: inline-block;
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
   border-radius: 50%;
-  background-color: black;
+  background-color: #E00073;
 }
 
 .slider-button:hover {
@@ -124,6 +124,10 @@ footer a:hover {
 }
 
 #rock-image-1:target ~ .image-container {
+  left: 0px;
+}
+
+#robot-image-1:target ~ .image-container {
   left: 0px;
 }
 
@@ -153,6 +157,14 @@ footer a:hover {
   #rock-image-3:target ~ .image-container {
     left: -1000px;
   }
+
+  #robot-image-2:target ~ .image-container {
+    left: -500px;
+  }
+
+  #robot-image-3:target ~ .image-container {
+    left: -1000px;
+  }
 }
 @media screen and (max-width: 600px) {
   .slide-container {
@@ -178,6 +190,14 @@ footer a:hover {
   }
 
   #rock-image-3:target ~ .image-container {
+    left: -600px;
+  }
+
+  #robot-image-2:target ~ .image-container {
+    left: -300px;
+  }
+
+  #robot-image-3:target ~ .image-container {
     left: -600px;
   }
 }
