--- a/slideshow.scss
+++ b/slideshow.scss
@@ -26,10 +26,10 @@
 
 .slider-button {
     display: inline-block;
-    height: 20px;
-    width: 20px;
+    height: 15px;
+    width: 15px;
     border-radius: 50%;
-    background-color: black;
+    background-color: #E00073;
 }
 
 .slider-button:hover {
@@ -42,6 +42,10 @@
 }
 
 #rock-image-1:target ~ .image-container {
+    left: 0px;
+}
+
+#robot-image-1:target ~ .image-container {
     left: 0px;
 }
 
@@ -71,6 +75,14 @@
     #rock-image-3:target ~ .image-container {
         left: -1000px;
     }
+
+    #robot-image-2:target ~ .image-container {
+        left: -500px;
+    }
+    
+    #robot-image-3:target ~ .image-container {
+        left: -1000px;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -97,6 +109,14 @@
     }
     
     #rock-image-3:target ~ .image-container {
+        left: -600px;
+    }
+
+    #robot-image-2:target ~ .image-container {
+        left: -300px;
+    }
+    
+    #robot-image-3:target ~ .image-container {
         left: -600px;
     }
 }
