--- a/about.scss
+++ b/about.scss
@@ -54,6 +54,9 @@
                 margin-top: 20px;
             }
         }
+        .links-container {
+            flex-direction: column;
+        }
     }
 
     @media screen and (min-width: 601px) {
@@ -64,16 +67,23 @@
     }
     .links-container {
         display: flex;
-        flex-direction: column;
+        // flex-direction: column;
         align-items: center;
         margin-bottom: 50px;
         a {
             text-decoration: none;
-            background-color: #E00073;
-            color: white;
+            background-color: white;
+            color: #E00073;
+            border: 2px solid #E00073;
             padding: 10px;
             border-radius: 5px;
-            margin-top: 20px;
+            margin: 20px 20px;
+            transition: 0.5s;
+        }
+
+        a:hover {
+            color: white;
+            background-color: #E00073;
         }
     }
 }
