--- a/blog.css
+++ b/blog.css
@@ -3,6 +3,7 @@ body {
   padding: 0px;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
+  background-color: white;
 }
 
 p {
@@ -38,6 +39,9 @@ nav a {
   padding: 20px 50px;
   text-transform: uppercase;
 }
+nav a:hover {
+  color: white;
+}
 
 @media screen and (min-width: 601px) {
   nav {
@@ -64,14 +68,18 @@ nav a {
 footer {
   height: 100px;
   width: 100%;
-  background-color: #24002E;
+  background-color: #1A1A1A;
   margin: 0px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 footer a {
   text-decoration: none;
+  color: grey;
+  margin: 0px 50px;
+}
+footer a:hover {
   color: white;
 }
 
