--- a/index.css
+++ b/index.css
@@ -38,6 +38,7 @@ nav a {
   color: #E00073;
   padding: 20px 50px;
   text-transform: uppercase;
+  transition: 0.5s;
 }
 nav a:hover {
   color: white;
@@ -58,7 +59,6 @@ nav a:hover {
   nav a {
     padding: 2px 10px;
     display: none;
-    background-color: #24002E;
   }
 
   nav:hover a {
@@ -78,6 +78,7 @@ footer a {
   text-decoration: none;
   color: grey;
   margin: 0px 50px;
+  transition: 0.5s;
 }
 footer a:hover {
   color: white;
@@ -113,6 +114,7 @@ footer a:hover {
   width: 15px;
   border-radius: 50%;
   background-color: #E00073;
+  transition: 0.5s;
 }
 
 .slider-button:hover {
@@ -231,6 +233,7 @@ footer a:hover {
   border-radius: 5px;
   border: 1px solid #00FFBF;
   text-decoration: none;
+  transition: 0.5s;
 }
 .landing .landing-container a:hover {
   background-color: #00FFBF;
@@ -278,10 +281,11 @@ footer a:hover {
   padding: 5px;
   font-size: 18pt;
   margin-top: 5px;
+  transition: 0.5s;
 }
 .portfolio .project .github:hover {
   background-color: #E00073;
-  color: lightcyan;
+  color: white;
 }
 .portfolio .project .project-content {
   padding-bottom: 10px;
