--- a/index.scss
+++ b/index.scss
@@ -29,7 +29,7 @@
             border-radius: 5px;
             border: 1px solid #00FFBF;
             text-decoration: none;
-            
+            transition: 0.5s;            
         }
 
         a:hover {
@@ -84,11 +84,12 @@
             padding: 5px;
             font-size: 18pt;
             margin-top: 5px;
+            transition: 0.5s;
         }
 
         .github:hover {
             background-color: #E00073;   
-            color: lightcyan;   
+            color: white;  
         }
 
         .project-content {
