--- a/partials.scss
+++ b/partials.scss
@@ -38,6 +38,7 @@ nav {
         color: #E00073;
         padding: 20px 50px;
         text-transform: uppercase;
+        transition: 0.5s;
     }
     a:hover {
         color: white;
@@ -61,7 +62,6 @@ nav {
         a {
             padding: 2px 10px;
             display: none;
-            background-color: #24002E;
         }
     }  
 
@@ -83,6 +83,7 @@ footer {
         text-decoration: none;
         color: grey;
         margin: 0px 50px;
+        transition: 0.5s;
     }
     a:hover {
         color: white;
