changed landing image

--- a/about.scss
+++ b/about.scss
@@ -1,4 +1,4 @@
-@import 'partials.scss';
+@import 'styles.scss';
 
 .about {
     margin-top:100px;
@@ -37,11 +37,11 @@
         margin-top: 50px;
         img {
             width: 300px;
-            height: 300px;
-            border: 1px solid black;
         }
         p {
             width: 300px;
+            font-size: 14pt;
+            line-height: 2rem;
         }
     }
 
