--- a/slideshow.scss
+++ b/slideshow.scss
@@ -29,7 +29,7 @@
     height: 15px;
     width: 15px;
     border-radius: 50%;
-    background-color: #E00073;
+    background-color: grey;
     transition: 0.5s;
 }
 
