--- a/about.css
+++ b/about.css
@@ -6,6 +6,10 @@ body {
   background-color: white;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 p {
   line-height: 1.5rem;
   font-family: "Lora", serif;
@@ -35,13 +39,13 @@ nav {
 }
 nav a {
   text-decoration: none;
-  color: #E00073;
+  color: grey;
   padding: 20px 50px;
   text-transform: uppercase;
   transition: 0.5s;
 }
 nav a:hover {
-  color: white;
+  color: #E00073;
 }
 
 @media screen and (min-width: 601px) {
@@ -59,7 +63,6 @@ nav a:hover {
   nav a {
     padding: 2px 10px;
     display: none;
-    background-color: #24002E;
   }
 
   nav:hover a {
@@ -124,11 +127,11 @@ footer a:hover {
 }
 .about .bio img {
   width: 300px;
-  height: 300px;
-  border: 1px solid black;
 }
 .about .bio p {
   width: 300px;
+  font-size: 14pt;
+  line-height: 2rem;
 }
 @media screen and (max-width: 600px) {
   .about .bio {
