--- a/blog.css
+++ b/blog.css
@@ -6,6 +6,10 @@ body {
   background-color: white;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 p {
   line-height: 1.5rem;
   font-family: "Lora", serif;
@@ -31,16 +35,17 @@ nav {
   display: flex;
   z-index: 10;
   align-items: center;
-  background-color: #1A1A1A;
+  background-color: #020024;
 }
 nav a {
   text-decoration: none;
-  color: #E00073;
+  color: grey;
   padding: 20px 50px;
   text-transform: uppercase;
+  transition: 0.5s;
 }
 nav a:hover {
-  color: white;
+  color: #E00073;
 }
 
 @media screen and (min-width: 601px) {
@@ -58,7 +63,6 @@ nav a:hover {
   nav a {
     padding: 2px 10px;
     display: none;
-    background-color: #24002E;
   }
 
   nav:hover a {
@@ -78,6 +82,7 @@ footer a {
   text-decoration: none;
   color: grey;
   margin: 0px 50px;
+  transition: 0.5s;
 }
 footer a:hover {
   color: white;
@@ -95,7 +100,14 @@ footer a:hover {
   margin: 50px 50px;
 }
 .blog .blog-post p {
-  line-height: 1.5rem;
+  line-height: 2rem;
+  font-size: 14pt;
+}
+.blog .blog-post img {
+  margin: 20px 20px 20px 0px;
+  width: 300px;
+  display: inline-block;
+  float: left;
 }
 
 /*# sourceMappingURL=blog.css.map */
