--- a/blog.scss
+++ b/blog.scss
@@ -1,4 +1,4 @@
-@import 'partials.scss';
+@import 'styles.scss';
 
 .blog {
     margin-top:100px;
@@ -10,7 +10,15 @@
         max-width: 600px;
         margin: 50px 50px;
         p {
-            line-height: 1.5rem;
+            line-height: 2rem;
+            font-size: 14pt;
+        }
+
+        img {
+            margin: 20px 20px 20px 0px;
+            width: 300px;
+            display: inline-block;
+            float: left;
         }
     }
 
