--- a/index.css
+++ b/index.css
@@ -6,6 +6,10 @@ body {
   background-color: white;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 p {
   line-height: 1.5rem;
   font-family: "Lora", serif;
@@ -31,17 +35,17 @@ nav {
   display: flex;
   z-index: 10;
   align-items: center;
-  background-color: #1A1A1A;
+  background-color: #020024;
 }
 nav a {
   text-decoration: none;
-  color: #E00073;
+  color: grey;
   padding: 20px 50px;
   text-transform: uppercase;
   transition: 0.5s;
 }
 nav a:hover {
-  color: white;
+  color: #E00073;
 }
 
 @media screen and (min-width: 601px) {
@@ -113,7 +117,7 @@ footer a:hover {
   height: 15px;
   width: 15px;
   border-radius: 50%;
-  background-color: #E00073;
+  background-color: grey;
   transition: 0.5s;
 }
 
@@ -208,7 +212,8 @@ footer a:hover {
   height: 100vh;
   background-color: #1A1A1A;
   background-blend-mode: multiply;
-  background: linear-gradient(0deg, rgba(2, 0, 36, 0.5) 0%, rgba(36, 0, 46, 0.5)), url("https://images.pexels.com/photos/220118/pexels-photo-220118.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background: linear-gradient(0deg, #020024 0%, rgba(36, 0, 46, 0.2)), url("images/landing-bg.jpg");
+  background-size: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -224,14 +229,15 @@ footer a:hover {
   color: white;
   display: block;
   text-align: center;
-  font-size: 48pt;
+  font-size: 54pt;
+  margin-bottom: 20px;
 }
 .landing .landing-container a {
   display: block;
   color: #00FFBF;
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid #00FFBF;
+  border: 2px solid #00FFBF;
   text-decoration: none;
   transition: 0.5s;
 }
@@ -240,13 +246,14 @@ footer a:hover {
   color: #00003E;
 }
 .landing .landing-container h3 {
-  color: #810060;
-  font-size: 24pt;
+  color: #E00073;
+  font-size: 20pt;
   text-transform: uppercase;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   letter-spacing: 1px;
   text-align: center;
+  margin-top: 0px;
 }
 
 .portfolio {
@@ -269,6 +276,7 @@ footer a:hover {
   letter-spacing: 0.3em;
   font-size: 26pt;
   margin-bottom: 0px;
+  text-align: center;
 }
 .portfolio .project img {
   border-radius: 10px;
@@ -309,10 +317,11 @@ footer a:hover {
     grid-column: 2/3;
     width: 300px;
     padding-top: 100px;
-    font-size: 16pt;
+    font-size: 14pt;
   }
   .portfolio .project .project-content img {
     width: 500px;
+    border: 2px solid #00FFBF;
   }
 }
 
