--- a/index.scss
+++ b/index.scss
@@ -1,12 +1,13 @@
-@import 'partials.scss';
+@import 'styles.scss';
 @import 'slideshow.scss';
-
+// https://images.pexels.com/photos/220118/pexels-photo-220118.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
 .landing {
     width: 100vw;
     height: 100vh;
     background-color: #1A1A1A;
     background-blend-mode: multiply;
-    background: linear-gradient(0deg, rgba(2,0,36,0.5) 0%, rgba(36,0,46,0.5)), url("https://images.pexels.com/photos/220118/pexels-photo-220118.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background: linear-gradient(0deg, rgba(2,0,36,1.0) 0%, rgba(36,0,46,0.2)), url("images/landing-bg.jpg");
+    background-size: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,14 +21,15 @@
             color: white;
             display: block;
             text-align: center;
-            font-size: 48pt;
+            font-size: 54pt;
+            margin-bottom: 20px;
         }
         a {
             display: block;
             color: #00FFBF;
             padding: 5px;
             border-radius: 5px;
-            border: 1px solid #00FFBF;
+            border: 2px solid #00FFBF;
             text-decoration: none;
             transition: 0.5s;            
         }
@@ -38,13 +40,14 @@
         }
    
         h3 {
-           color: #810060;
-           font-size: 24pt;
+           color: #E00073;
+           font-size: 20pt;
            text-transform: uppercase;
            font-family: 'Roboto', sans-serif;
            font-weight: 300;
            letter-spacing: 1px;
            text-align: center;
+           margin-top: 0px;
    
         }
     }
@@ -70,6 +73,7 @@
             letter-spacing: 0.3em;
             font-size: 26pt;
             margin-bottom: 0px;
+            text-align: center;
         }
 
         img {
@@ -115,10 +119,11 @@
                     grid-column: 2 / 3;
                     width: 300px;
                     padding-top: 100px;
-                    font-size: 16pt;
+                    font-size: 14pt;
                 }
                 img {
                     width: 500px;
+                    border: 2px solid #00FFBF;
                     // border-radius: 20px;
                 }
             }   
