--- a/blog.css
+++ b/blog.css
@@ -26,6 +26,11 @@ h1 {
 
 h2 {
   font-size: 48pt;
+  color: #1a0520;
+}
+
+h3 {
+  font-size: 20pt;
 }
 
 nav {
@@ -35,7 +40,7 @@ nav {
   display: flex;
   z-index: 10;
   align-items: center;
-  background-color: #020024;
+  background-color: #1a0520;
 }
 nav a {
   text-decoration: none;
@@ -108,6 +113,10 @@ footer a:hover {
   width: 300px;
   display: inline-block;
   float: left;
+}
+.blog .blog-post a {
+  text-decoration: none;
+  color: #00FFBF;
 }
 
 /*# sourceMappingURL=blog.css.map */
