--- a/blog.scss
+++ b/blog.scss
@@ -20,6 +20,11 @@
             display: inline-block;
             float: left;
         }
+
+        a {
+            text-decoration: none;
+            color: #00FFBF;
+        }
     }
 
 }
