--- a/styles.scss
+++ b/styles.scss
@@ -27,6 +27,11 @@ h1 {
 
 h2 {
     font-size: 48pt;
+    color: rgb(26, 5, 32);
+}
+
+h3 {
+    font-size: 20pt;
 }
 
 nav {   
@@ -36,7 +41,7 @@ nav {
     display: flex;
     z-index: 10;
     align-items: center;
-    background-color: rgba(2,0,36,1.0);
+    background-color: rgba(26, 5, 32, 1.0);
     a {
         text-decoration: none;
         color: grey;
