--- a/index.scss
+++ b/index.scss
@@ -1,12 +1,18 @@
 @import 'styles.scss';
 @import 'slideshow.scss';
 // https://images.pexels.com/photos/220118/pexels-photo-220118.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
+
+@media screen and (min-width: 900px) {
+    .landing {
+        background: linear-gradient(0deg, rgba(26, 5, 32, 0.0) 0%, rgba(26, 5, 32, 0.0)), url("images/sunset-2.png");
+        background-size: 100vw;
+    }
+    
+}
 .landing {
     width: 100vw;
     height: 100vh;
-    background-color: #1A1A1A;
-    background-blend-mode: multiply;
-    background: linear-gradient(0deg, rgba(26, 5, 32, 1.0) 0%, rgba(26, 5, 32, 0.2)), url("images/landing-bg.jpg");
+    background-color: rgba(26, 5, 32, 1.0);
     background-size: 100vw;
     display: flex;
     justify-content: center;
@@ -102,6 +108,22 @@
             font-size: 18pt;
             margin-top: 5px;
             transition: 0.5s;
+        }
+
+        .site {
+            text-decoration: none;
+            color: #00FFBF;
+            border: 2px solid #00FFBF;
+            border-radius: 5px;
+            padding: 5px;
+            font-size: 18pt;
+            margin-top: 5px;
+            transition: 0.5s;
+        }
+
+        .site:hover {
+            background-color: #00FFBF;   
+            color: white;  
         }
 
         .github:hover {
