--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ h2 {
 
 h3 {
   font-size: 20pt;
+  font-weight: 300;
 }
 
 nav {
@@ -44,7 +45,7 @@ nav {
 }
 nav a {
   text-decoration: none;
-  color: grey;
+  color: white;
   padding: 20px 50px;
   text-transform: uppercase;
   transition: 0.5s;
@@ -77,7 +78,7 @@ nav a:hover {
 footer {
   height: 100px;
   width: 100%;
-  background-color: #1A1A1A;
+  background-color: #413bd6;
   margin: 0px;
   display: flex;
   justify-content: center;
@@ -85,12 +86,12 @@ footer {
 }
 footer a {
   text-decoration: none;
-  color: grey;
+  color: white;
   margin: 0px 50px;
   transition: 0.5s;
 }
 footer a:hover {
-  color: white;
+  color: #E00073;
 }
 
 .slide-container {
@@ -214,7 +215,7 @@ footer a:hover {
 }
 @media screen and (min-width: 900px) {
   .landing {
-    background: linear-gradient(0deg, rgba(26, 5, 32, 0) 0%, rgba(26, 5, 32, 0)), url("images/sunset-2.png");
+    background: linear-gradient(0deg, rgba(26, 5, 32, 0) 0%, rgba(26, 5, 32, 0)), url("images/sunset-5.png");
     background-size: 100vw;
   }
 }
@@ -233,6 +234,11 @@ footer a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.landing .landing-container .heading-container {
+  width: 60%;
+  padding: 50px;
+  margin-top: 50px;
 }
 .landing .landing-container h1 {
   color: white;
