--- a/index.scss
+++ b/index.scss
@@ -4,7 +4,7 @@
 
 @media screen and (min-width: 900px) {
     .landing {
-        background: linear-gradient(0deg, rgba(26, 5, 32, 0.0) 0%, rgba(26, 5, 32, 0.0)), url("images/sunset-2.png");
+        background: linear-gradient(0deg, rgba(26, 5, 32, 0.0) 0%, rgba(26, 5, 32, 0.0)), url("images/sunset-5.png");
         background-size: 100vw;
     }
     
@@ -23,6 +23,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        .heading-container {
+            width: 60%;
+            padding: 50px;
+            margin-top: 50px;
+        }
         h1 {
             color: white;
             display: block;
