--- a/index.css
+++ b/index.css
@@ -213,7 +213,7 @@ footer a:hover {
     left: -600px;
   }
 }
-@media only screen and (min-width: 900px) {
+@media only screen and (min-device-width: 900px) {
   .landing {
     background: linear-gradient(0deg, rgba(26, 5, 32, 0) 0%, rgba(26, 5, 32, 0)), url("images/sunset-7.png");
     background-size: 100vw;
@@ -330,7 +330,7 @@ footer a:hover {
   margin: 0px 50px;
   line-height: 2rem;
 }
-@media only screen and (min-width: 601px) {
+@media only screen and (min-device-width: 601px) {
   .portfolio .project .project-content {
     display: grid;
     grid-template-columns: 1fr 1r;
@@ -352,7 +352,7 @@ footer a:hover {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-device-width: 600px) {
   .project-content {
     display: flex;
     flex-direction: column;
