--- a/index.scss
+++ b/index.scss
@@ -179,13 +179,13 @@
                 align-items: center;
                 img {
                     display: block;
-                    width: 300px;
+                    // width: 300px;
                     // border-radius: 20px;
                 }
 
                 p {
                     display: block;
-                    width: 300px;
+                    width: 500px;
                     padding-top: 20px;
                     font-size: 14pt;
                 }
