--- a/index.css
+++ b/index.css
@@ -54,12 +54,12 @@ nav a:hover {
   color: #E00073;
 }
 
-@media screen and (min-width: 601px) {
+@media screen and (min-device-width: 601px) {
   nav {
     justify-content: center;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-device-width: 600px) {
   nav {
     display: flex;
     flex-direction: column;
@@ -143,76 +143,40 @@ footer a:hover {
   left: 0px;
 }
 
-@media screen and (min-width: 601px) {
-  .slide-container {
-    width: 500px;
-    height: 600px;
-  }
-
-  .image-container {
-    width: 1500px;
-    height: 600px;
-  }
-
-  #slider-image-2:target ~ .image-container {
-    left: -500px;
-  }
-
-  #slider-image-3:target ~ .image-container {
-    left: -1000px;
-  }
-
-  #rock-image-2:target ~ .image-container {
-    left: -500px;
-  }
-
-  #rock-image-3:target ~ .image-container {
-    left: -1000px;
-  }
-
-  #robot-image-2:target ~ .image-container {
-    left: -500px;
-  }
-
-  #robot-image-3:target ~ .image-container {
-    left: -1000px;
-  }
+.slide-container {
+  width: 500px;
+  height: 600px;
 }
-@media screen and (max-width: 600px) {
-  .slide-container {
-    width: 300px;
-    height: 400px;
-  }
 
-  .image-container {
-    width: 900px;
-    height: 400px;
-  }
-
-  #slider-image-2:target ~ .image-container {
-    left: -300px;
-  }
-
-  #slider-image-3:target ~ .image-container {
-    left: -600px;
-  }
-
-  #rock-image-2:target ~ .image-container {
-    left: -300px;
-  }
-
-  #rock-image-3:target ~ .image-container {
-    left: -600px;
-  }
-
-  #robot-image-2:target ~ .image-container {
-    left: -300px;
-  }
-
-  #robot-image-3:target ~ .image-container {
-    left: -600px;
-  }
+.image-container {
+  width: 1500px;
+  height: 600px;
 }
+
+#slider-image-2:target ~ .image-container {
+  left: -500px;
+}
+
+#slider-image-3:target ~ .image-container {
+  left: -1000px;
+}
+
+#rock-image-2:target ~ .image-container {
+  left: -500px;
+}
+
+#rock-image-3:target ~ .image-container {
+  left: -1000px;
+}
+
+#robot-image-2:target ~ .image-container {
+  left: -500px;
+}
+
+#robot-image-3:target ~ .image-container {
+  left: -1000px;
+}
+
 @media only screen and (min-device-width: 900px) {
   .landing {
     background: linear-gradient(0deg, rgba(26, 5, 32, 0) 0%, rgba(26, 5, 32, 0)), url("images/sunset-7.png");
@@ -360,11 +324,10 @@ footer a:hover {
   }
   .project-content img {
     display: block;
-    width: 300px;
   }
   .project-content p {
     display: block;
-    width: 300px;
+    width: 500px;
     padding-top: 20px;
     font-size: 14pt;
   }
