--- a/index.css
+++ b/index.css
@@ -54,12 +54,12 @@ nav a:hover {
   color: #E00073;
 }
 
-@media screen and (min-device-width: 601px) {
+@media only screen and (min-device-width: 601px) {
   nav {
     justify-content: center;
   }
 }
-@media screen and (max-device-width: 600px) {
+@media only screen and (max-device-width: 600px) {
   nav {
     display: flex;
     flex-direction: column;
@@ -324,6 +324,7 @@ footer a:hover {
   }
   .project-content img {
     display: block;
+    width: 500px;
   }
   .project-content p {
     display: block;
