--- a/slideshow.scss
+++ b/slideshow.scss
@@ -50,7 +50,8 @@
     left: 0px;
 }
 
-// @media screen and (min-device-width: 601px) {
+// WEB VIEW
+ @media screen and (min-device-width: 601px) {
     .slide-container {
         width: 500px;
         height: 600px;
@@ -84,41 +85,42 @@
     #robot-image-3:target ~ .image-container {
         left: -1000px;
     }
-// }
+ }
 
-// @media screen and (max-width: 600px) {
-//     .slide-container {
-//         width: 300px;
-//         height: 400px;
-//     }
+// MOBILE VIEW
+@media screen and (max-device-width: 600px) {
+    .slide-container {
+        width: 600px;
+        height: 700px;
+    }
 
-//     .image-container {
-//         width: 900px;
-//         height: 400px;
-//     }
+    .image-container {
+        width: 1800px;
+        height: 700px;
+    }
 
-//     #slider-image-2:target ~ .image-container {
-//         left: -300px;
-//     }
+    #slider-image-2:target ~ .image-container {
+        left: -600px;
+    }
     
-//     #slider-image-3:target ~ .image-container {
-//         left: -600px;
-//     }
+    #slider-image-3:target ~ .image-container {
+        left: -1200px;
+    }
 
-//     #rock-image-2:target ~ .image-container {
-//         left: -300px;
-//     }
+    #rock-image-2:target ~ .image-container {
+        left: -600px;
+    }
     
-//     #rock-image-3:target ~ .image-container {
-//         left: -600px;
-//     }
+    #rock-image-3:target ~ .image-container {
+        left: -1200px;
+    }
 
-//     #robot-image-2:target ~ .image-container {
-//         left: -300px;
-//     }
+    #robot-image-2:target ~ .image-container {
+        left: -600px;
+    }
     
-//     #robot-image-3:target ~ .image-container {
-//         left: -600px;
-//     }
-// }
+    #robot-image-3:target ~ .image-container {
+        left: -1200px;
+    }
+}
 
