--- a/index.css
+++ b/index.css
@@ -54,12 +54,12 @@ nav a:hover {
   color: #E00073;
 }
 
-@media only screen and (min-device-width: 601px) {
+@media only screen and (min-width: 601px) {
   nav {
     justify-content: center;
   }
 }
-@media only screen and (max-device-width: 600px) {
+@media only screen and (max-width: 600px) {
   nav {
     display: flex;
     flex-direction: column;
@@ -143,7 +143,7 @@ footer a:hover {
   left: 0px;
 }
 
-@media screen and (min-device-width: 601px) {
+@media screen and (min-width: 601px) {
   .slide-container {
     width: 500px;
     height: 600px;
@@ -178,7 +178,7 @@ footer a:hover {
     left: -1000px;
   }
 }
-@media screen and (max-device-width: 600px) {
+@media screen and (max-width: 600px) {
   .slide-container {
     width: 800px;
     height: 900px;
@@ -213,7 +213,7 @@ footer a:hover {
     left: -1600px;
   }
 }
-@media only screen and (min-device-width: 900px) {
+@media only screen and (min-width: 900px) {
   .landing {
     background: linear-gradient(0deg, rgba(26, 5, 32, 0) 0%, rgba(26, 5, 32, 0)), url("images/sunset-7.png");
     background-size: 100vw;
@@ -352,17 +352,21 @@ footer a:hover {
   }
 }
 
-@media only screen and (max-device-width: 600px) {
-  .project-content {
+@media only screen and (max-width: 600px) {
+  .project .github {
+    font-size: 32pt;
+    border: 5px solid #E00073;
+  }
+  .project .project-content {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  .project-content img {
+  .project .project-content img {
     display: block;
     width: 800px;
   }
-  .project-content p {
+  .project .project-content p {
     display: block;
     width: 800px;
     padding-top: 20px;
