--- a/index.css
+++ b/index.css
@@ -180,37 +180,37 @@ footer a:hover {
 }
 @media screen and (max-width: 600px) {
   .slide-container {
-    width: 800px;
-    height: 900px;
+    width: 300px;
+    height: 400px;
   }
 
   .image-container {
-    width: 2400px;
-    height: 900px;
+    width: 900px;
+    height: 400px;
   }
 
   #slider-image-2:target ~ .image-container {
-    left: -800px;
+    left: -300px;
   }
 
   #slider-image-3:target ~ .image-container {
-    left: -1600px;
+    left: -600px;
   }
 
   #rock-image-2:target ~ .image-container {
-    left: -800px;
+    left: -300px;
   }
 
   #rock-image-3:target ~ .image-container {
-    left: -1600px;
+    left: -600px;
   }
 
   #robot-image-2:target ~ .image-container {
-    left: -800px;
+    left: -300px;
   }
 
   #robot-image-3:target ~ .image-container {
-    left: -1600px;
+    left: -600px;
   }
 }
 @media only screen and (min-width: 900px) {
@@ -330,7 +330,7 @@ footer a:hover {
   margin: 0px 50px;
   line-height: 2rem;
 }
-@media only screen and (min-device-width: 601px) {
+@media only screen and (min-width: 601px) {
   .portfolio .project .project-content {
     display: grid;
     grid-template-columns: 1fr 1r;
@@ -364,11 +364,11 @@ footer a:hover {
   }
   .project .project-content img {
     display: block;
-    width: 800px;
+    width: 300px;
   }
   .project .project-content p {
     display: block;
-    width: 800px;
+    width: 300px;
     padding-top: 20px;
     font-size: 18pt;
   }
