--- a/index.css
+++ b/index.css
@@ -54,12 +54,12 @@ nav a:hover {
   color: #E00073;
 }
 
-@media only screen and (min-width: 601px) {
+@media screen and (min-width: 601px) {
   nav {
     justify-content: center;
   }
 }
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   nav {
     display: flex;
     flex-direction: column;
@@ -213,7 +213,7 @@ footer a:hover {
     left: -600px;
   }
 }
-@media only screen and (min-width: 900px) {
+@media screen and (min-width: 900px) {
   .landing {
     background: linear-gradient(0deg, rgba(26, 5, 32, 0) 0%, rgba(26, 5, 32, 0)), url("images/sunset-7.png");
     background-size: 100vw;
