--- a/index.scss
+++ b/index.scss
@@ -2,7 +2,7 @@
 @import 'slideshow.scss';
 // https://images.pexels.com/photos/220118/pexels-photo-220118.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
 
-@media only screen and (min-width: 900px) {
+@media screen and (min-width: 900px) {
     .landing {
         background: linear-gradient(0deg, rgba(26, 5, 32, 0.0) 0%, rgba(26, 5, 32, 0.0)), url("images/sunset-7.png");
         background-size: 100vw;
