--- a/index.css
+++ b/index.css
@@ -113,12 +113,13 @@ footer {
 }
 footer a {
   text-decoration: none;
-  color: white;
+  color: #7774d1;
   margin: 0px 50px;
   transition: 0.5s;
+  font-size: 24pt;
 }
 footer a:hover {
-  color: #E00073;
+  color: white;
 }
 
 .slide-container {
@@ -242,7 +243,7 @@ footer a:hover {
 }
 @media screen and (min-width: 900px) {
   .landing {
-    background: linear-gradient(0deg, rgba(26, 5, 32, 0) 0%, rgba(26, 5, 32, 0)), url("images/sunset-7.png");
+    background: linear-gradient(0deg, rgba(26, 5, 32, 0) 0%, rgba(26, 5, 32, 0)), url("images/sunset-5.png");
     background-size: 100vw;
   }
   .landing .heading-container {
@@ -277,7 +278,7 @@ footer a:hover {
   color: white;
   display: block;
   text-align: center;
-  font-size: 40pt;
+  font-size: 48pt;
   margin-bottom: 20px;
 }
 .landing .landing-container a {
