--- a/index.scss
+++ b/index.scss
@@ -1,10 +1,10 @@
 @import 'styles.scss';
 @import 'slideshow.scss';
-// https://images.pexels.com/photos/220118/pexels-photo-220118.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
+
 
 @media screen and (min-width: 900px) {
     .landing {
-        background: linear-gradient(0deg, rgba(26, 5, 32, 0.0) 0%, rgba(26, 5, 32, 0.0)), url("images/sunset-7.png");
+        background-image: url("images/sunset-5.png");
         background-size: 100vw;
         .heading-container {
             width: 60%;
@@ -39,7 +39,7 @@
             color: white;
             display: block;
             text-align: center;
-            font-size: 40pt;
+            font-size: 48pt;
             margin-bottom: 20px;
         }
         a {
@@ -83,8 +83,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        // background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(36,0,46,1) 100%);
-        // background-color: white;
         padding: 100px 0px;
         width: 100%;
         h3 {
@@ -141,7 +139,6 @@
         }
         @media only screen and (min-width: 601px) {
             .project-content {
-                // width: 600px;
                 display: grid; 
                 grid-template-columns: 1fr 1r;
                 grid-template-rows: 1fr;
@@ -158,8 +155,6 @@
                 }
                 img {
                     width: 500px;
-                    // border: 2px solid black;
-                    // border-radius: 20px;
                 }
             }   
         }
@@ -180,7 +175,6 @@
             img {
                 display: block;
                 width: 300px;
-                // border-radius: 20px;
             }
 
             p {
