--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
   padding: 0px;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
-  background-color: white;
+  background-color: lavenderblush;
 }
 
 * {
@@ -12,12 +12,11 @@ body {
 
 p {
   line-height: 1.5rem;
-  font-family: "Lora", serif;
 }
 
 h1, h2 {
-  font-family: "Lora", serif;
-  font-weight: 400;
+  font-weight: 300;
+  text-transform: uppercase;
 }
 
 h1 {
@@ -105,7 +104,7 @@ nav .nav-links-container #hamburger i {
 footer {
   height: 100px;
   width: 100%;
-  background-color: #413bd6;
+  background-color: #1a0520;
   margin: 0px;
   display: flex;
   justify-content: center;
@@ -243,7 +242,7 @@ footer a:hover {
 }
 @media screen and (min-width: 900px) {
   .landing {
-    background-image: url("images/sunset-7.png");
+    background: linear-gradient(rgba(26, 5, 32, 0.2) 0%, #1a0520), url("images/landing-bg.jpg");
     background-size: 100vw;
   }
   .landing .heading-container {
