--- a/styles.scss
+++ b/styles.scss
@@ -3,7 +3,7 @@ body {
     padding: 0px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
-    background-color: white;
+    background-color: lavenderblush;
     
 }
 
@@ -13,12 +13,11 @@ body {
 
 p {
     line-height: 1.5rem;
-    font-family: 'Lora', serif;
 }
 
 h1, h2 {
-    font-family: 'Lora', serif;
-    font-weight: 400;
+    font-weight: 300;
+    text-transform: uppercase;
 }
 
 h1 {
@@ -114,7 +113,7 @@ nav {
 footer {
     height: 100px;
     width: 100%;
-    background-color: #413bd6;
+    background-color: rgba(26, 5, 32, 1.0);
     margin: 0px;
     display: flex;
     justify-content: center;
