--- a/index.scss
+++ b/index.scss
@@ -36,10 +36,10 @@
             margin-top: 50px;
         }
         h1 {
-            color: white;
+            color: rgba(26, 5, 32, 1.0);
             display: block;
             text-align: center;
-            font-size: 48pt;
+            font-size: 56pt;
             margin-bottom: 20px;
         }
         a {
