--- a/styles.scss
+++ b/styles.scss
@@ -3,8 +3,8 @@ body {
     padding: 0px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
-    background-color: white;
-    
+    background-color: rgba(26, 5, 32, 1.0);
+    color: white;
 }
 
 * {
@@ -12,8 +12,9 @@ body {
 }
 
 p {
-    line-height: 1.5rem;
+    line-height: 2rem;
     font-family: 'Lora', serif;
+    color: purple;
 }
 
 h1, h2 {
@@ -27,7 +28,7 @@ h1 {
 
 h2 {
     font-size: 48pt;
-    color: rgb(26, 5, 32);
+    color: #00FFBF;
 }
 
 h3 {
@@ -42,18 +43,18 @@ nav {
     display: flex;
     z-index: 10;
     align-items: center;
-    background-color: rgba(26, 5, 32, 1.0);
+    background-color: #E00073;
     min-height: 50px;
     .nav-links-container {
         a {
             text-decoration: none; 
-            color: white;
+            color: rgba(26, 5, 32, 1.0);
             padding: 20px 50px;
             text-transform: uppercase;
             transition: 0.5s;
         }
         a:hover {
-            color: #E00073;
+            color: white;
         }
         #hamburger {
             i {
