--- a/blog.scss
+++ b/blog.scss
@@ -1,31 +1,39 @@
 @import 'styles.scss';
 
 .blog {
-    margin-top:100px;
+    margin-top:50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    .blog-post {
-        max-width: 600px;
-        margin: 50px 50px;
-        p {
-            line-height: 2rem;
-            font-size: 14pt;
+    .blog-post-container {
+        display: flex;
+        width: 90%;
+        height: 400px;
+        .blog-post {
+            width: 20%;
+            margin: 20px 20px;
+            overflow: scroll;
+            p {
+                line-height: 2rem;
+                font-size: 14pt;
+            }
+    
+            img {
+                margin: 20px 20px 20px 0px;
+                width: 300px;
+                display: inline-block;
+                float: left;
+            }
+    
+            a {
+                text-decoration: none;
+                color: #00FFBF;
+            }
         }
 
-        img {
-            margin: 20px 20px 20px 0px;
-            width: 300px;
-            display: inline-block;
-            float: left;
-        }
-
-        a {
-            text-decoration: none;
-            color: #00FFBF;
-        }
     }
+    
 
 }
 
